--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "cors": "^2.8.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "mongodb": "^2.2.29",
-    "mongoose": "^4.11.1",
-    "morgan": "~1.8.1",
-    "nodemon": "^1.11.0"
+    "morgan": "~1.8.1"
   }
 }
